--- a/css/exerciseSelector.css
+++ b/css/exerciseSelector.css
@@ -97,7 +97,7 @@ label{
 
 /*Make the first letter of the element with id 'special' green and 100px font size(font-size: 100)*/
 
-#special{
+#special::first-letter{
     font-size: 100px;
     color:green;
 }
