--- a/css/tictac.css
+++ b/css/tictac.css
@@ -10,5 +10,31 @@ table tbody tr td{
 
     width: 100px;
     height: 100px;
-    background-color:red
+}
+
+
+#role2{
+    border-right: solid 1px black;
+    border-left: solid 1px black;
+}
+
+#role4{
+    border-top: solid 1px black;
+    border-bottom: solid 1px black;
+}
+
+#role5{
+    border: solid 1px black;
+}
+
+#role6{
+    border-top: solid 1px black;
+    border-bottom: solid 1px black;
+}
+
+
+#role8{
+    border-left: solid 1px black;
+    border-right: solid 1px black;
+
 }
